[package]
name = "thread-count"
version = "0.1.0"
authors = ["kavoor <kev29@cornell.edu>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "thread_count"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.2"

[dependencies]
neon = "0.3.2"
num_cpus = "1.4.0"
